# Deals-bot

./: .gitignore  README.md  config.yaml  pyproject.toml
src/pc_deals_bot/: __init__.py  config.py  filters.py  main.py  models.py  notifier.py  storage.py
src/pc_deals_bot/scrapers/: __init__.py  base.py  dealabs.py
tests/: test_filters.py  test_notifier.py
