[project]
name = "pc-deals-bot"
version = "0.1.0"
description = "Bot de veille des bons plans PC fixe / composants"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pc-deals-bot = "pc_deals_bot.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
